--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,15 @@
 {
-  "rewrites": [{ "source": "/api/v1/products/(.*)", "destination": "/api/v1/products" }]
+  "version":2,
+  "builds": [
+    {
+      "src": "./server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes":[
+    {
+      "src": "/(.*)",
+      "dest":"/"
+    }
+  ]
 }
