--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,21 @@
 {
-  "version":2,
+  "version": 2,
   "builds": [
     {
-      "src": "./server.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
-  ],
-  "routes":[
+  ],  
+  "env": {
+    "NODE_ENV": "development",
+    "USERNAMES":"abdelrahma",
+    "PASSWORD":"sw1234",
+    "DATABASE":"mongodb+srv://abdelrahma:<password>@cluster0.wldka.mongodb.net/swproject?retryWrites=true&w=majority"
+  },
+  "routes": [{"handle": "filesystem"},
     {
-      "src": "/(.*)",
-      "dest":"/"
+      "src": "/.*",
+      "dest": "server.js"
     }
   ]
 }
